Added icon to .desktop files, splitted y/n question texts in two lines as \n didnt worked

--- a/desktop/systemclient.desktop
+++ b/desktop/systemclient.desktop
@@ -4,3 +4,4 @@ GenericName=systemclient
 Type=Application
 Exec=sudo -H systemclient
 TryExec=/usr/bin/systemclient
+Icon=/opt/philleconnect/logo.png
