--- a/desktop/PhilleConnectDrive.desktop
+++ b/desktop/PhilleConnectDrive.desktop
@@ -5,4 +5,4 @@ Comment=Mit meinem Home-Laufwerk verbinden
 Type=Application
 Exec=sudo -H PhilleConnectDrive
 TryExec=/usr/bin/PhilleConnectDrive
-Icon=
+Icon=/opt/philleconnect/logo.png
