--- a/desktop/PhilleConnectTeacher.desktop
+++ b/desktop/PhilleConnectTeacher.desktop
@@ -5,4 +5,4 @@ Comment=Mit meinem Home-Laufwerk verbinden
 Type=Application
 Exec=sudo -H PhilleConnectTeacher
 TryExec=/usr/bin/PhilleConnectTeacher
-Icon=
+Icon=/opt/philleconnect/logo.png
